# LMR-Hunter

./: .gitignore  CLAUDE.md  README.md  deploy.sh  pyproject.toml  requirements-dev.txt  requirements.txt
config/: .env.example
docs/: architecture.md  development-plan.md  glossary.md  index.md  market-sessions.md  optimization-plan.md  risk-controls.md  runtime-optimization-plan.md  status.md  strategy.md
docs/analysis/: vps-data-comparison-20260330.md  vps-quick-reference.txt
docs/reviews/: index.md  microstructure-refactoring-plan.md  optimization-plan.md  runtime-optimization-plan.md  shadow-mode-admission.md  strategy-repair-plan.md
src/: main.py
src/analysis/: daily_report.py  research_report.py
src/features/: __init__.py  calculator.py  episode.py  outcome.py
src/gateway/: binance_ws.py  models.py  rest_client.py
src/monitor/: __init__.py  alerts.py
src/storage/: __init__.py  schema.py  writer.py
src/tools/: audit.py
src/utils/: logger.py
tests/: test_bug_fixes.py  test_episode_model.py  test_episode_outcomes.py  test_phase4_outcome_semantics.py  test_phase5_signal_timing.py  test_phase6_research_admission.py  test_research_report.py  test_run_validity.py  test_time_semantics.py  test_writer_integrity.py  test_writer_throughput.py
